--- a/login.html
+++ b/login.html
@@ -31,6 +31,10 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+    <!--  toastify  -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </head>
 
 <body>
@@ -288,21 +292,21 @@
                         </div>
                     </div>
                 </div>
-                </div>
-        <div class="container px-lg-5">
-            <div class="copyright">
-                <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="index.html">Q Stratups Private Limited</a>, All
-                        Right
-                        Reserved.
+            </div>
+            <div class="container px-lg-5">
+                <div class="copyright">
+                    <div class="row">
+                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                            &copy; <a class="border-bottom" href="index.html">Q Stratups Private Limited</a>, All
+                            Right
+                            Reserved.
 
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        <br>
-                        <div class="hider" style="color: #a3c0d4;">
-                            Designed By <a style="color: #a3c0d4;" class="border-bottom-black"
-                                href="https://htmlcodex.com">HTML Codex</a>
-                           </div>
+                            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                            <br>
+                            <div class="hider" style="color: #a3c0d4;">
+                                Designed By <a style="color: #a3c0d4;" class="border-bottom-black"
+                                    href="https://htmlcodex.com">HTML Codex</a>
+                            </div>
                         </div>
                         <div class="col-md-6 text-center text-md-end">
                             <div class="footer-menu">
