--- a/admin/startup.html
+++ b/admin/startup.html
@@ -140,7 +140,7 @@
 
   <!-- <script>
     // Fetch data from backend
-    fetch('https://qstartup-server.vercel.app/admin/getAllStartUp?role=startUp')
+    fetch('https://qstartupserver.onrender.com/admin/getAllStartUp?role=startUp')
       .then(response => response.json())
       .then(data => {
         // Get table body element
