--- a/admin/mentor.html
+++ b/admin/mentor.html
@@ -32,7 +32,9 @@
 
   <!-- ____________________ -->
 
-
+  <!--  toastify  -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
 </head>
 
