--- a/userPanel/mentorPanel/index.html
+++ b/userPanel/mentorPanel/index.html
@@ -23,6 +23,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <!--  toastify  -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <style>
         .box {
             display: none;
@@ -158,12 +161,8 @@
                     </div>
                 </div>
                 <div class="card-body p-3">
-                    <p class="text-sm">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi saepe, voluptatibus accusamus
-                        enim, accusantium est aspernatur temporibus dolorem, nobis omnis aperiam velit quo rerum aliquam
-                        maiores libero doloremque hic! Inventore facilis animi corporis molestiae dolor consequuntur nam
-                        quisquam deserunt neque quo ratione at, accusantium optio soluta praesentium aperiam sit
-                        voluptas.
+                    <p class="text-sm" id="mentorBrief">
+
                     </p>
                     <hr class="horizontal gray-light my-4">
                     <ul class="list-group" id="mentorInfoList">
