--- a/userPanel/startupPanel/index.html
+++ b/userPanel/startupPanel/index.html
@@ -23,6 +23,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
+    <!--  toastify  -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <style>
         .box {
             display: none;
@@ -158,12 +162,8 @@
                     </div>
                 </div>
                 <div class="card-body p-3">
-                    <p class="text-sm">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi saepe, voluptatibus accusamus
-                        enim, accusantium est aspernatur temporibus dolorem, nobis omnis aperiam velit quo rerum aliquam
-                        maiores libero doloremque hic! Inventore facilis animi corporis molestiae dolor consequuntur nam
-                        quisquam deserunt neque quo ratione at, accusantium optio soluta praesentium aperiam sit
-                        voluptas.
+                    <p class="text-sm" id="startupBrief">
+
                     </p>
                     <hr class="horizontal gray-light my-4">
                     <ul id="startupInfoList" class="list-group">
@@ -813,12 +813,12 @@
                 </form>
             </div>
         </div>
-        <div class="loopple-alert loopple-alert-gradient-dark loopple-alert-dismissible loopple-fade loopple-position-fixed loopple-z-index-9999 loopple-bottom-2 loopple-mx-auto loopple-text-center loopple-right-0 loopple-left-0 loopple-w-50"
+        <!-- <div class="loopple-alert loopple-alert-gradient-dark loopple-alert-dismissible loopple-fade loopple-position-fixed loopple-z-index-9999 loopple-bottom-2 loopple-mx-auto loopple-text-center loopple-right-0 loopple-left-0 loopple-w-50"
             role="alert"><strong>View and edit your project online</strong><a
                 class="loopple-btn loopple-btn-white loopple-ml-2"
                 href="https://www.loopple.com/builder/project-pfHAk8NtEKpWxMlIfCcAS5wYbLRA1K6s3L1"
                 target="_blank">Editor</a><button type="button" class="close" data-dismiss="alert"
-                aria-label="Close"><span aria-hidden="true">×</span></button></div>
+                aria-label="Close"><span aria-hidden="true">×</span></button></div> -->
         <script src="https://demos.creative-tim.com/soft-ui-dashboard/assets/js/core/popper.min.js"></script>
         <script src="https://demos.creative-tim.com/soft-ui-dashboard/assets/js/core/bootstrap.min.js"></script>
         <script src="https://demos.creative-tim.com/soft-ui-dashboard/assets/js/plugins/chartjs.min.js"></script>
