--- a/userPanel/mentorPanel/index.html
+++ b/userPanel/mentorPanel/index.html
@@ -557,7 +557,7 @@
                                     <div class="form-group">
                                         <label class="form-control-label" for="input-email">Email address</label>
                                         <input type="email" name="email_Mentor" id="input-email" class="form-control"
-                                            placeholder="cake@example.com">
+                                            placeholder="cake@example.com" readonly>
                                     </div>
                                 </div>
                             </div>
