--- a/admin/index.html
+++ b/admin/index.html
@@ -89,10 +89,7 @@
     <!-- header part start here  -->
     <header class="wrapper">
         <!-- animation start here  start -->
-        <!-- <div class="circle-container">
-            <div class="circle-pules cir-two"></div>
-            <div class="circle-pules cir-three"></div>
-        </div> -->
+        <div class="center"></div>
         <!-- animation start here end -->
     
         <div class="inner-width">
