navbar & title img added

--- a/Registration.html
+++ b/Registration.html
@@ -7,6 +7,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
+    <link rel="icon" href="./img/Q-removebg-preview.png" type="image/icon type">
+
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -83,10 +85,10 @@
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link ">Home</a>
                         <a href="login.html" class="nav-item nav-link">Q Portal</a>
-                        <a href="customer.html" class="nav-item nav-link">Our Customers</a>
-                        <a href="service.html" class="nav-item nav-link">Council</a>
-                        <a href="project.html" class="nav-item nav-link">Partners</a>
-                        <a href="about.html" class="nav-item nav-link">About Us</a><!--Q Founders-->
+                        <a href="customer.html" class="nav-item nav-link">Q Customers</a>
+                        <a href="service.html" class="nav-item nav-link">Q Council</a>
+                        <a href="project.html" class="nav-item nav-link">Q Partners</a>
+                        <a href="about.html" class="nav-item nav-link">Q Founders</a><!--Q Founders-->
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Contact Us</a>
                             <div class="dropdown-menu m-0">
@@ -162,7 +164,7 @@
                         <div class="section-title position-relative text-center mb-5 pb-2 wow fadeInUp"
                             data-wow-delay="0.1s">
                             <h6 class="position-relative d-inline text-primary ps-4">Registration Form</h6>
-                            <h2 class="mt-2">Get Disruptive Acceleration With Q Startups</h2>
+                            <h2 class="mt-2">Get Disruptive Acceleration With <br> Q Startups</h2>
                         </div>
                         <div class="wow fadeInUp" data-wow-delay="0.3s">
 
