--- a/project.html
+++ b/project.html
@@ -7,6 +7,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
+    <link rel="icon" href="./img/Q-removebg-preview.png" type="image/icon type">
+
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -70,7 +72,7 @@
                         </div>
                     </div>
                     <!--<butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>-->
-                    <a href="Registration.html" class="btn btn-secondary text-light rounded-pill py-2 px-4 ms-3">Register Startup</a>
+                    <a href="Registration.html" class="btn btn-secondary text-light rounded-pill py-2 px-4 ms-3">Register</a>
                 </div>
             </nav>
 
@@ -136,7 +138,7 @@
                             Q PARTNERS HELP PROMOTE ACCELERATION OF STARTUPS BY ORGANISING SEVERAL “EDUCATION  SEMINARS AND WORKSHOPS”,
                             <br>
                             <b>
-                                BENEFITS AND ADVANTAGES OF ACCELERATION
+                                Benefits & advantages of Acceleration
                             </b>
                         </p>
                         <div class="row g-3">
