--- a/service.html
+++ b/service.html
@@ -7,6 +7,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
+    <link rel="icon" href="./img/Q-removebg-preview.png" type="image/icon type">
+
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -70,7 +72,7 @@
                         </div>
                     </div>
                     <!--<butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>-->
-                    <a href="Registration.html" class="btn btn-secondary text-light rounded-pill py-2 px-4 ms-3">Register Startup</a>
+                    <a href="Registration.html" class="btn btn-secondary text-light rounded-pill py-2 px-4 ms-3">Register</a>
                 </div>
             </nav>
 
@@ -144,9 +146,6 @@
                         </div>
                         <div class="d-flex align-items-center mt-4">
                             <a class="btn btn-primary rounded-pill px-4 me-3" href="about.html">Read More</a>
-                            <a class="btn btn-outline-primary btn-square me-3" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-primary btn-square me-3" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-primary btn-square me-3" href=""><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
@@ -206,8 +205,8 @@
                                 <i class="fa fa-home fa-2x"></i>
                             </div>
                             -->
-                                <h5 class="mb-3">Mr. Prabal Chatterjee </h5>
-                                <p> (PGDPM from IMM - 1984)</p>
+                                <h5 class="mb-3">Mr. Dilip Kumar Gayen</h5>
+                                <p> (Manufacturing & Business Expert)</p>
                             <p>Expert on Productivity, Quality Improvement & Manufacturing
                                 MBA, PGDPM, ME and Pursuing PhD in Efficiency Scorecard, TQM and TPM Trained
                                 from Asian Productivity Organization, Japan. Multi-Country Study in SME at Taiwan under
