--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
+    <link rel="icon" href="./img/Q-removebg-preview.png" type="image/icon type">
+
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -77,7 +79,7 @@
                     </div>
                     <!--<butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>-->
                     <a href="Registration.html"
-                        class="btn btn-secondary text-light rounded-pill py-2 px-4 ms-3">Register Startup</a>
+                        class="btn btn-secondary text-light rounded-pill py-2 px-4 ms-3">Register</a>
                 </div>
             </nav>
 
