--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@
                         <div class="d-flex align-items-center mt-4">
                             <a class="btn btn-primary rounded-pill px-4 me-3" href="about.html">Read More</a>
                             <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-linkedin-in"></i></a>
+                            <a style="margin-left: 1rem;" class="btn btn-outline-primary btn-square" href="./contact.html">
+                                <i class="fa fa-envelope" aria-hidden="true"></i>
+                            </a>
+                            <a style="margin-left: 1rem;" class="btn btn-outline-primary btn-square" href="./team.html">
+                                <i class="fa fa-camera" aria-hidden="true"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -639,17 +645,21 @@
                     <div class="col-md-6 col-lg-3">
                         <h5 class="text-white mb-4">Get In Touch</h5>
                         <p><i class="fa fa-map-marker-alt me-3"></i>16, GOLAGHATA ROAD
-                            KOLKATA
                             Kolkata - 700048
+                            <br>
                             West Bengal - India</p>
                         <p><i class="fa fa-phone-alt me-3"></i>+91 93391 19671</p>
                         <p><i class="fa fa-envelope me-6"></i>consult.pragya@gmail.com</p>
                         <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                            <a class="btn btn-outline-light btn-social" href="./contact.html">
+                                <i class="fa fa-envelope" aria-hidden="true"></i>
+                            </a>
+                            <a class="btn btn-outline-light btn-social" href="./team.html">
+                                <i class="fa fa-camera" aria-hidden="true"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
