--- a/team.html
+++ b/team.html
@@ -157,17 +157,21 @@
                 <div class="col-md-6 col-lg-3">
                     <h5 class="text-white mb-4">Get In Touch</h5>
                     <p><i class="fa fa-map-marker-alt me-3"></i>16, GOLAGHATA ROAD
-                        KOLKATA
                         Kolkata - 700048
+                        <br>
                         West Bengal - India</p>
                     <p><i class="fa fa-phone-alt me-3"></i>+91 93391 19671</p>
                     <p><i class="fa fa-envelope me-6"></i>consult.pragya@gmail.com</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                        <a class="btn btn-outline-light btn-social" href="./contact.html">
+                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                        </a>
+                        <a class="btn btn-outline-light btn-social" href="./team.html">
+                            <i class="fa fa-camera" aria-hidden="true"></i>
+                        </a>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3">
