--- a/career.html
+++ b/career.html
@@ -145,12 +145,21 @@
                             <form action="SEND ADDRESS" id="ft-form" class="careerForm" method="POST"
                                 accept-charset="UTF-8" enctype="multipart/form-data">
                                 <fieldset>
-                                    <legend>Job</legend>
+                                    <legend>Job / Internship</legend>
                                     <label>
                                         Application for *
                                         <select name="applicationFor" required>
-                                            <option>Job A</option>
-                                            <option>Job B</option>
+                                            <option>-</option>
+                                            <option>Full Stack Developer</option>
+                                            <option>Backend Developer</option>
+                                            <option>Frontend Developer</option>
+                                            <option>Analyst</option>
+                                            <option>HR</option>
+                                            <option>Research</option>
+                                            <option>Content</option>
+                                            <option>Graphic Designer</option>
+                                            <option>Marketing</option>
+                                            <option>Assistant</option>
                                         </select>
                                     </label>
                                 </fieldset>
