--- a/admin/startup.html
+++ b/admin/startup.html
@@ -53,10 +53,13 @@
     <div class="navigation">
 
       <div class="user-profile">
-        <div class="user-area">
-          <img src="/img/admin profile.jpg" alt="">
-          <h1>Company</h1>
-        </div>
+        <center>
+          <div class="user-area">
+            <a href="../index.html">
+              <img style="width: 5rem; border-radius: 0;" src="../img/Q-removebg-preview.png" alt="">
+            </a>
+            </div>
+        </center>
       </div>
 
       <!-- service part start here -->
@@ -75,7 +78,7 @@
 
           <li>
             <i class="fa-solid fa-q brown"></i>
-            <a href="">Settings</a>
+            <a href="./applicants.html">Applicants</a>
           </li>
 
           <li>
