--- a/career.html
+++ b/career.html
@@ -155,6 +155,7 @@
                                             <option>Frontend Developer</option>
                                             <option>Analyst</option>
                                             <option>HR</option>
+                                            <option>Other</option>
                                             <option>Research</option>
                                             <option>Content</option>
                                             <option>Graphic Designer</option>
