colour navbars active

--- a/admin/applicants.html
+++ b/admin/applicants.html
@@ -58,7 +58,7 @@
 
           <li>
             <i class="fa-solid fa-q brown"></i>
-            <a href="./aplicants.html">Applicants</a>
+            <a class="active" href="./aplicants.html">Applicants</a>
           </li>
 
           <li>
