--- a/admin/index.html
+++ b/admin/index.html
@@ -44,7 +44,7 @@
                 <ul class="links">
                     <li>
                         <i class="fa-sharp fa-solid fa-user red"></i>
-                        <a href="./index.html">General</a>
+                        <a class="active" href="./index.html">General</a>
                     </li>
 
                    
