--- a/admin/mentor.html
+++ b/admin/mentor.html
@@ -83,7 +83,7 @@
 
                     <li>
                         <i class="fa-solid fa-user-group blue"></i>
-                        <a href="./mentor.html">Mentor List</a>
+                        <a class="active" href="./mentor.html">Mentor List</a>
                     </li>
 
                     <li>
