--- a/admin/startup.html
+++ b/admin/startup.html
@@ -73,7 +73,7 @@
 
           <li>
             <i class="fa-solid fa-list-ul green"></i>
-            <a href="./startup.html">Startup</a>
+            <a class="active" href="./startup.html">Startup</a>
           </li>
 
           <li>
