--- a/admin/Edit.html
+++ b/admin/Edit.html
@@ -111,7 +111,7 @@
 
                     <li>
                       <i class="fa fa-info-circle coral" aria-hidden="true"></i>
-                      <a href="./editdetails.html">Details</a>
+                      <a class="active" href="./editdetails.html">Details</a>
                   </li>
 
                 </ul>
