--- a/signUp.html
+++ b/signUp.html
@@ -94,7 +94,7 @@
                     </div>
                     <!--<butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>-->
                     <a href="Registration.html"
-                        class="btn btn-secondary text-light rounded-pill py-2 px-4 ms-3">Register Startup</a>
+                        class="btn btn-secondary text-light rounded-pill py-2 px-4 ms-3">Register</a>
                 </div>
             </nav>
 
