background image & admin dashboard

--- a/admin/Edit.html
+++ b/admin/Edit.html
@@ -41,9 +41,12 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
     <style>
-        .box {
-            display: none;
-        }
+        
+        .bg_colour {
+                   background-repeat: no-repeat;
+                   background-size: cover;
+                   background-image: url("https://img.freepik.com/free-photo/vivid-blurred-colorful-wallpaper-background_58702-3798.jpg");
+               }
     </style>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -60,7 +63,7 @@
     </script>
 </head>
 
-<body>
+<body class="bg_colour">
 
 
     <!-- navbar start -->
