--- a/admin/applicants.html
+++ b/admin/applicants.html
@@ -15,10 +15,16 @@
   <!-- TABLE LINKS -->
   <!---------- CHECK ASSETS ONCE IT has JS files MAY include Backend ALSO --------------->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css">
-
+  <style>
+    .bg_colour {
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-image: url("https://img.freepik.com/free-photo/vivid-blurred-colorful-wallpaper-background_58702-3798.jpg");
+    }
+</style>
 </head>
 
-<body>
+<body class="bg_colour">
 
   <!-- toggle area start here -->
   <input type="checkbox" id="check">
