--- a/admin/startup.html
+++ b/admin/startup.html
@@ -35,10 +35,16 @@
   <!--  toastify  -->
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-
+  <style>
+    .bg_colour {
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-image: url("https://img.freepik.com/free-photo/vivid-blurred-colorful-wallpaper-background_58702-3798.jpg");
+    }
+</style>
 </head>
 
-<body>
+<body class="bg_colour">
 
   <!-- toggle area start here -->
   <input type="checkbox" id="check">
