--- a/admin/editdetails.html
+++ b/admin/editdetails.html
@@ -34,13 +34,15 @@
      <!-- font awesome link -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
      <style>
-        body{
-            overflow: visible;
-        }
-         .box {
-             display: none;
-         }
-         .metorORstartup_btn{
+            .box {
+                display: none;
+            }
+               .bg_colour {
+                   background-repeat: no-repeat;
+                   background-size: cover;
+                   background-image: url("https://img.freepik.com/free-photo/vivid-blurred-colorful-wallpaper-background_58702-3798.jpg");
+               }
+            .metorORstartup_btn{
             border: 1px solid black;
             border-radius: 20px;
             margin: 1rem 1rem 1rem 1rem;
@@ -66,7 +68,7 @@
          });</script>
 </head>
 
-<body style="overflow-x: hidden;">
+<body class="bg_colour">
 
 
     <!-- navbar start -->
