--- a/admin/index.html
+++ b/admin/index.html
@@ -13,8 +13,15 @@
     <link rel="stylesheet" href="./css/style.css">
     <!-- font awesome link here -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        .bg_colour {
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-image: url("https://img.freepik.com/free-photo/vivid-blurred-colorful-wallpaper-background_58702-3798.jpg");
+        }
+    </style>
 </head>
-<body>
+<body class="bg_colour">
 
 
 
