career data save to database

--- a/career.html
+++ b/career.html
@@ -146,9 +146,9 @@
                                 <fieldset>
                                     <legend>Job / Internship</legend>
                                     <label>
-                                        Application for *
-                                        <select name="applicationFor" required>
-                                            <option>-</option>
+                                        Application for * [ please choose your job]
+                                        <select name="applicationFor" placeholder="she" required>
+
                                             <option>Full Stack Developer</option>
                                             <option>Backend Developer</option>
                                             <option>Frontend Developer</option>
