pdf resume dowonloading

--- a/admin/applicants.html
+++ b/admin/applicants.html
@@ -166,13 +166,14 @@
           </div>
 
           <div class="documents">
-            <table style="width:100%; border: 1px solid black; margin-top: 1rem;">
-              <thead style="border: 1px solid black;">
-                <th>Name</th>
-                <th>View Resume / Remove</th>
-                <th>Job Type</th>
+            <table
+              style="width:100%; border: 1px solid black; margin-top: 1rem; padding: 0px, 10px; text-align: center;">
+              <thead style="border: 1px solid black; ">
+                <th style="text-align: center;">Name</th>
+                <th style="text-align: center;">View Resume / Remove</th>
+                <th style="text-align: center;">Job Type</th>
                 <!-----------------Sort BY date applied------------------>
-                <th>Date Applied</th>
+                <th style="text-align: center;">Date Applied</th>
               </thead>
               <tbody id="aplicantTbody">
 
