pdf almost done

--- a/admin/applicants.html
+++ b/admin/applicants.html
@@ -170,10 +170,10 @@
               style="width:100%; border: 1px solid black; margin-top: 1rem; padding: 0px, 10px; text-align: center;">
               <thead style="border: 1px solid black; ">
                 <th style="text-align: center;">Name</th>
-                <th style="text-align: center;">View Resume / Remove</th>
+                <th style="text-align: center;">download Resume / Remove</th>
                 <th style="text-align: center;">Job Type</th>
                 <!-----------------Sort BY date applied------------------>
-                <th style="text-align: center;">Date Applied</th>
+                <th style="text-align: center;">Date Applied [d/m/y]</th>
               </thead>
               <tbody id="aplicantTbody">
 
