--- a/customer.html
+++ b/customer.html
@@ -263,7 +263,7 @@
                         <p><i class="fa fa-phone-alt me-3"></i>+91 93391 19671</p>
                         <p><i class="fa fa-envelope me-6"></i>consult.pragya@gmail.com</p>
                         <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href="">
+                            <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/company/q-startups/">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
                             <a class="btn btn-outline-light btn-social" href="./contact.html">
