--- a/service.html
+++ b/service.html
@@ -146,7 +146,7 @@
                         </div>
                         <div class="d-flex align-items-center mt-4">
                             <a class="btn btn-primary rounded-pill px-4 me-3" href="about.html">Read More</a>
-                            <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-outline-primary btn-square" href="https://www.linkedin.com/company/q-startups/"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -293,7 +293,7 @@
                         <p><i class="fa fa-phone-alt me-3"></i>+91 93391 19671</p>
                         <p><i class="fa fa-envelope me-6"></i>consult.pragya@gmail.com</p>
                         <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href="">
+                            <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/company/q-startups/">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
                             <a class="btn btn-outline-light btn-social" href="./contact.html">
