--- a/signUp.html
+++ b/signUp.html
@@ -221,11 +221,15 @@
                         <p><i class="fa fa-phone-alt me-3"></i>+91 93391 19671</p>
                         <p><i class="fa fa-envelope me-6"></i>consult.pragya@gmail.com</p>
                         <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/company/q-startups/">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                            <a class="btn btn-outline-light btn-social" href="./contact.html">
+                                <i class="fa fa-envelope" aria-hidden="true"></i>
+                            </a>
+                            <a class="btn btn-outline-light btn-social" href="./team.html">
+                                <i class="fa fa-camera" aria-hidden="true"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
