--- a/team.html
+++ b/team.html
@@ -57,8 +57,8 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">Q Portal</a>
-                        <a href="about.html" class="nav-item nav-link">Q Customers</a>
+                        <a href="./login.html" class="nav-item nav-link">Q Portal</a>
+                        <a href="customer.html" class="nav-item nav-link">Q Customers</a>
                         <a href="service.html" class="nav-item nav-link">Q Council</a>
                         <a href="project.html" class="nav-item nav-link">Q Partners</a>
                         <a href="about.html" class="nav-item nav-link">Q Founders</a><!--Q Founders-->
@@ -163,7 +163,7 @@
                     <p><i class="fa fa-phone-alt me-3"></i>+91 93391 19671</p>
                     <p><i class="fa fa-envelope me-6"></i>consult.pragya@gmail.com</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href="">
+                        <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/company/q-startups/">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
                         <a class="btn btn-outline-light btn-social" href="./contact.html">
