business document uploaded and data saved to database

--- a/userPanel/startupPanel/index.html
+++ b/userPanel/startupPanel/index.html
@@ -338,13 +338,16 @@
                                                 </h5>
                                             </a>
                                             <p class="mb-4 text-sm">
-                                                F6S is the largest global startup network with 4.6 million members. It delivers billions in growth to startup founders and their companies - along with corporates, governments and programs in the global startup ecosystem. 
+                                                F6S is the largest global startup network with 4.6 million members. It
+                                                delivers billions in growth to startup founders and their companies -
+                                                along with corporates, governments and programs in the global startup
+                                                ecosystem.
                                             </p>
                                             <div class="d-flex align-items-center justify-content-between">
                                                 <a href="https://f6s.com">
                                                     <button type="button" class="btn btn-outline-primary btn-sm mb-0">
                                                         Connect</button>
-                                                    </a>
+                                                </a>
                                                 <div class="avatar-group mt-2">
                                                     <a href="javascript:;" class="avatar avatar-xs rounded-circle"
                                                         data-bs-toggle="tooltip" data-bs-placement="bottom" title=""
@@ -390,7 +393,7 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <form action="" id="socialMediaForm">
+                    <form action="" id="socialMediaForm" enctype="multipart/form-data">
                         <h6 class="heading-small text-muted mb-4">Social Media information</h6>
 
                         <div class="row">
@@ -426,7 +429,7 @@
                                 <div class="form-group">
                                     <label class="form-control-label" for="input-Business_Documents">Business
                                         Documents</label>
-                                    <input type="file" name="bussinesDoucument" id="input-Business_Documents"
+                                    <input type="file" name="businessDocument" id="input-Business_Documents"
                                         class="form-control" placeholder="" value="">
                                 </div>
                             </div>
