Details of founder

--- a/about.html
+++ b/about.html
@@ -187,7 +187,8 @@
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="img/about.jpg">
+                        <img style="border-radius: 20px;
+                        " class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="./img/CSPJ.jpg">
                     </div>
                 </div>
             </div>
